--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     position:relative;
     font-size:0.9325rem;
     font-family: 'Manrope', sans-serif;
+    background: whitesmoke;
 }
 img{
     display:block;
@@ -65,6 +66,7 @@ main {
     background-color: white;
     margin-top:4.5rem;
     padding:1rem;
+    border-radius:1rem;
 }
 .first__section{
     padding-top:1rem; 
@@ -81,10 +83,10 @@ main {
     margin-top:2.2rem;
   }
  
-  .slider {
+  .range__slider {
     -webkit-appearance: none; 
     appearance: none;
-    width: 90%; 
+    width: 100%; 
     height: 0.5rem; 
     background: hsl(224, 65%, 95%); 
     outline: none;
@@ -94,10 +96,10 @@ main {
   }
   
  
-  .slider:hover {
+  .range__slider:hover {
     opacity: 1; 
   }
-.slider::-moz-range-thumb {
+.range__slider::-moz-range-thumb {
     width: 2.5rem; 
     height: 2.5rem;
     background: hsl(174, 86%, 45%); 
@@ -105,7 +107,7 @@ main {
     border:none;
     border-radius:50%;
   }
-  .slider::-webkit-slider-thumb {
+  .range__slider::-webkit-slider-thumb {
     -webkit-appearance: none; 
     appearance: none;
     width: 2.5rem; 
@@ -129,9 +131,9 @@ main {
     display: flex;
     align-items:center;
     justify-content: center;
-    gap:1rem;
+    gap:0.7rem;
     font-size:0.8rem;
-    margin-top:2.4rem;
+    margin-top:2.3rem;
   }
   .yearly{
     display:flex;
@@ -139,7 +141,11 @@ main {
     gap:0.5rem;
   }
   .yearly span{
-    padding:0.1rem 0.5rem;
+    width:2rem;
+    height: 1rem;
+    text-align: center;
+    display: grid;
+    align-items: center;
     border-radius: 01rem;
     background-color: hsl(14, 92%, 95%);
     font-weight:600;
@@ -163,9 +169,64 @@ main {
   }
   .button{
     margin-left:auto;
-    padding:0.5rem 3rem;
     border-radius: 1rem;
     margin-top:2.2rem;
     font-weight:600;
     color:white;
+    border:none;
+    width:10rem;
+    height:2.5rem;
+    text-align:center;
   }
+
+
+
+	/* Style for the switch container */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 3rem;
+  height: 1.3rem;
+}
+
+/* Hide the default checkbox input */
+.switch input {
+  display: none;
+}
+
+/* Style for the switch's slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+/* Style for the slider when it's in the "on" state */
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1rem;
+  width: 1rem;
+  left: 4px;
+  bottom: 2px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+  
+}
+
+/* Style for the slider when it's in the "off" state */
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
